Fixed alignmenent in feature block

--- a/src/modules/features-block/components/stat/styles/stat.scss
+++ b/src/modules/features-block/components/stat/styles/stat.scss
@@ -2,6 +2,7 @@
 @import '../../../styles/heading-text';
 
 .stat {
+  border: 1px solid red;
   width: 692px;
   height: 748px;
   padding: 42px 56px;
