--- a/src/modules/features-block/styles/features-block.scss
+++ b/src/modules/features-block/styles/features-block.scss
@@ -46,6 +46,7 @@
   @media screen and (max-width: $breakpoint-small) {
     width: 100%;
     flex-direction: column;
+    align-items: center;
   }
 }
 .feature-block__last {
